[gd_scene load_steps=7 format=3 uid="uid://blfw63wgrb11i"]

[ext_resource type="Script" path="res://menu.gd" id="1_tmyup"]
[ext_resource type="Texture2D" uid="uid://dmu4cmo4owy3y" path="res://images/border1.png" id="2_uefsi"]
[ext_resource type="Texture2D" uid="uid://2d4ygsviiauv" path="res://images/border1-press.png" id="3_oand7"]

[sub_resource type="Animation" id="Animation_8mlif"]
resource_name = "blackinScene"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackoutScene:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.117647, 0.0666667, 0.235294, 1), Color(0.12549, 0.117647, 0.266667, 0)]
}

[sub_resource type="Animation" id="Animation_khxdd"]
resource_name = "blackoutScene"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BlackoutScene:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.12549, 0.117647, 0.266667, 0), Color(0.117647, 0.0666667, 0.235294, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m56b4"]
_data = {
"blackinScene": SubResource("Animation_8mlif"),
"blackoutScene": SubResource("Animation_khxdd")
}

[node name="menu" type="Node2D"]
script = ExtResource("1_tmyup")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12549, 0.117647, 0.266667, 1)

[node name="Label" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 459.0
offset_top = 200.0
offset_right = 1464.0
offset_bottom = 440.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 168
text = "WoM: ArenA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonStart" type="TextureButton" parent="."]
offset_left = 680.0
offset_top = 574.0
offset_right = 2536.0
offset_bottom = 1004.0
scale = Vector2(0.3, 0.3)
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 1
texture_normal = ExtResource("2_uefsi")
texture_pressed = ExtResource("3_oand7")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="LabelButtonStart" type="Label" parent="ButtonStart"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -414.5
offset_top = -99.0
offset_right = 414.5
offset_bottom = 99.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 145
text = "Новая игра"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m56b4")
}

[node name="ButtonСontinue" type="TextureButton" parent="."]
offset_left = 680.0
offset_top = 728.0
offset_right = 2536.0
offset_bottom = 1158.0
scale = Vector2(0.3, 0.3)
size_flags_horizontal = 4
size_flags_vertical = 8
focus_mode = 1
texture_normal = ExtResource("2_uefsi")
texture_pressed = ExtResource("3_oand7")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="LabelButtonContinue" type="Label" parent="ButtonСontinue"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -457.833
offset_top = -100.5
offset_right = 471.167
offset_bottom = 97.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 145
text = "Продолжить"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BlackoutScene" type="ColorRect" parent="."]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 8.0
offset_right = 1904.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.117647, 0.0666667, 0.235294, 1)

[connection signal="pressed" from="ButtonStart" to="." method="on_press_btn_new_game"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="pressed" from="ButtonСontinue" to="." method="_on_button_re_pressed"]
